err/jenkinsyamlconfigs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jenkinsapi'...
Listing './lib/python3.5/site-packages/jenkinsapi/command_line'...
Listing './lib/python3.5/site-packages/jenkinsapi/utils'...
Listing './lib/python3.5/site-packages/jenkinsapi-0.3.6.dist-info'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests/systests'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests/test_utils'...
Listing './lib/python3.5/site-packages/jenkinsapi_tests/unittests'...
Listing './lib/python3.5/site-packages/jenkinsapi_utils'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/scripts'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/buildWrappers'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/builders'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/builders/paramFactories'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/builders/params'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/conditions'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/parameters'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/properties'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/publishers'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/scms'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/templates/triggers'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs/yaml'...
Listing './lib/python3.5/site-packages/jenkinsyamlconfigs-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pathlib-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/pyul'...
Listing './lib/python3.5/site-packages/pyul/coreUtils'...
Compiling './lib/python3.5/site-packages/pyul/coreUtils/classcontextmanager.py'...
***   File "./lib/python3.5/site-packages/pyul/coreUtils/classcontextmanager.py", line 30
    print "Do Something with", new_branch
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyul/coreUtils/dotifydict.py'...
***   File "./lib/python3.5/site-packages/pyul/coreUtils/dotifydict.py", line 22
    raise KeyError, 'cannot set "{0}" in "{1}" ({2})'.format(restOfKey, myKey, repr(target))
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyul/envUtils.py'...
***   File "./lib/python3.5/site-packages/pyul/envUtils.py", line 139
    print "Requirement {0} already satisfied with {1}".format(req, dist)
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyul/guiUtils'...
Listing './lib/python3.5/site-packages/pyul/guiUtils/qt'...
Compiling './lib/python3.5/site-packages/pyul/guiUtils/qt/__init__.py'...
***   File "./lib/python3.5/site-packages/pyul/guiUtils/qt/__init__.py", line 63
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyul/importUtils.py'...
***   File "./lib/python3.5/site-packages/pyul/importUtils.py", line 55
    print "Making new RollbackImporter Instance"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyul/support'...
Compiling './lib/python3.5/site-packages/pyul/support/path.py'...
***   File "./lib/python3.5/site-packages/pyul/support/path.py", line 412
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyul-0.4.5.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
